--- a/.github/workflows/golang.yaml
+++ b/.github/workflows/golang.yaml
@@ -33,5 +33,8 @@ jobs:
       - name: Run tests
         # 执行go程序时一定要先cd到程序所在目录再执行go run 或者 go test
         run: |
-          cd ./test
+          cd ./test/go_run
           go run golang_case.go
+
+          cd ../go_test
+          go test -v
