--- a/.github/workflows/autofix_ci.yml
+++ b/.github/workflows/autofix_ci.yml
@@ -14,8 +14,18 @@ jobs:
   autofix:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      # TODO: add all code-fixing here.
+      ################################
+      # Run Linter against code base #
+      ################################
+      - name: Lint Code Base
+        uses: github/super-linter@v5
+        env:
+          VALIDATE_ALL_CODEBASE: false
+          # Change to 'master' if your main branch differs
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: autofix-ci/action@8bc06253bec489732e5f9c52884c7cace15c0160
