--- a/.github/workflows/autofix_ci.yml
+++ b/.github/workflows/autofix_ci.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Lint Code Base
         uses: super-linter/super-linter@v5.0.0
         env:
-          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ALL_CODEBASE: true
+          IGNORE_GITIGNORED_FILES: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
